attempt to fix BigBar alignment

--- a/wwwroot/index.css
+++ b/wwwroot/index.css
@@ -39,11 +39,14 @@ a:hover {
 	text-align: right;
 	vertical-align: middle;
 	padding-bottom: 16px;
+	width: 100%;
 }
 
 .bigbar a {
 	display: block;
+	width: 100%;
 	height: 58px;
+	padding-top: 10px;
 	padding-right: 8px;
 }
 
@@ -57,7 +60,6 @@ a:hover {
 .learnmorebar,
 .downloadbar,
 .gamesbar {
-	background-position: bottom right;
 	background-repeat: no-repeat;
 }
 
